fixed format name width, for mpu2 overflowing

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -585,7 +585,7 @@ h1, h2, h3, h4 {
   #demo-mobile-details {
     margin: 8px auto;
     display: block;
-    width: 70vw;
+    width: 72vw;
   }
   
   #mobile-outer {
